move __n closer to feature parity with i18n

--- a/test/locales/pirate.json
+++ b/test/locales/pirate.json
@@ -1,7 +1,7 @@
 {
   "Hello": "Avast ye mateys!",
-  "%s cat": {
-    "one": "%s land catfish",
-    "other": "%s land catfishes"
+  "%d cat": {
+    "one": "%d land catfish",
+    "other": "%d land catfishes"
   }
 }
